[package]
name = "synixe"
version = "0.1.0"
authors = ["Brett Mayson <brett@mayson.io>"]
edition = "2021"

[lib]
name = "synixe"
crate-type = ["cdylib"]

[dependencies]
arma-rs = "1.10.5"
discord-rpc-sdk = { git = "https://github.com/brettmayson/rust-discord-rpc", branch = "master" }
enigo = { git = "https://github.com/NaokiM03/enigo" }
lazy_static = "1.4.0"
webbrowser = "0.8.12"
