[package]
name = "synixe"
version = "0.1.0"
authors = ["Brett Mayson <brett@mayson.io>"]
edition = "2021"

[lib]
name = "synixe"
crate-type = ["cdylib"]

[dependencies]
arma-rs = "1.10.5"
discord-presence = "1.2"
enigo = { git = "https://github.com/NaokiM03/enigo" }
lazy_static = "1.5.0"
webbrowser = "1.0.6"
