[package]
name = "synixe_contractors"
version = "0.1.0"
authors = ["Brett Mayson <brett@mayson.io>"]
edition = "2018"

[lib]
name = "synixe_contractors"
crate-type = ["cdylib"]

[dependencies]
arma-rs = { git = "https://github.com/synixebrett/arma-rs", branch = "expirement" }
reqwest = { version = "0.10", features = ["json", "blocking", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"